--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=expense_tracker
 
 spring.datasource.url=jdbc:mariadb://localhost:3306/expense_tracker
-spring.datasource.username=root
-spring.datasource.password=ROOT
+spring.datasource.username=
+spring.datasource.password=
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
